--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@uniswap/token-lists": "^1.0.0-beta.30",
     "axios": "^0.27.2",
     "commander": "^9.3.0",
     "jsonschema": "^1.4.1"
