--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "!dist/**/*.test.js"
   ],
   "scripts": {
-    "cli": "yarn ts-node ./src/index.ts",
+    "indexer": "yarn ts-node ./src/index.ts",
     "clean": "rimraf ./dist/ ./exec/",
     "build": "yarn clean && tsc",
     "preparePublish": "yarn build && npm version patch",
@@ -33,7 +33,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@map3xyz/assets-helper": "^1.0.32",
+    "@map3xyz/assets-helper": "^1.0.34",
     "@uniswap/token-lists": "^1.0.0-beta.30",
     "axios": "^0.27.2",
     "jsonschema": "^1.4.1"
