--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
 nodeLinker: pnp
 
 yarnPath: .yarn/releases/yarn-3.2.1.cjs
+
+packageExtensions:
+  chalk@5.0.1:
+    dependencies:
+      "#ansi-styles": npm:ansi-styles@6.1.0
+      "#supports-color": npm:supports-color@9.2.2
