--- a/tasks.json
+++ b/tasks.json
@@ -5,5 +5,12 @@
         "type": "tokenlist",
         "source": "https://wispy-bird-88a7.uniswap.workers.dev/?url=http://tokenlist.aave.eth.link",
         "verified": false
+    },
+    {
+        "name": "polygon-default-tokenlist",
+        "network": "polygon",
+        "type": "tokenlist",
+        "source": "https://raw.githubusercontent.com/maticnetwork/polygon-token-list/master/src/tokens/default.json",
+        "verified": false
     }
 ]
