--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,12 +11,14 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/src/index.ts",
+            // "program": "${workspaceFolder}/src/index.ts",
+            "runtimeExecutable": "yarn",
             "preLaunchTask": "build",
-            "outFiles": [
-                "${workspaceFolder}/dist/**/*.js"
-            ],
-            "runtimeArgs": ["-r", "./.pnp.cjs", "-r", "ts-node/register"],
+            // "outFiles": [
+            //     "${workspaceFolder}/dist/**/*.js"
+            // ],
+            "runtimeArgs": ["indexer", "-r", "ts-node/register"],
+            "internalConsoleOptions": "openOnSessionStart",
             "cwd": "${workspaceFolder}",
             "env": {
                 "NODE_ENV": "development"
