switching trustwallet tokenlist parser to read from assets lists instead of from their outputed tokenlists.json

--- a/tasks.json
+++ b/tasks.json
@@ -26,5 +26,12 @@
         "type": "trustwallet",
         "source": null,
         "verified": false
+    },
+    {
+        "name": "trustwallet-ethereum",
+        "network": "ethereum",
+        "type": "trustwallet",
+        "source": null,
+        "verified": false
     }
 ]
