--- a/tasks.json
+++ b/tasks.json
@@ -1,37 +1,51 @@
 [
-    {
-        "name": "aave-ethereum-tokenlist",
-        "network": "ethereum",
-        "type": "tokenlist",
-        "source": "https://wispy-bird-88a7.uniswap.workers.dev/?url=http://tokenlist.aave.eth.link",
-        "verified": false
-    },
-    {
-        "name": "polygon-default-tokenlist",
-        "network": "polygon",
-        "type": "tokenlist",
-        "source": "https://raw.githubusercontent.com/maticnetwork/polygon-token-list/master/src/tokens/default.json",
-        "verified": false
-    },
-    {
-        "name": "cmc-ethereum-stablecoin-tokenlist",
-        "network": "ethereum",
-        "type": "tokenlist",
-        "source": "https://wispy-bird-88a7.uniswap.workers.dev/?url=http://stablecoin.cmc.eth.link",
-        "verified": false
-    },
-    {
-        "name": "trustwallet-polygon",
-        "network": "polygon",
-        "type": "trustwallet",
-        "source": null,
-        "verified": false
-    },
-    {
-        "name": "trustwallet-ethereum",
-        "network": "ethereum",
-        "type": "trustwallet",
-        "source": null,
-        "verified": false
-    }
+  {
+    "name": "aave-ethereum-tokenlist",
+    "network": "ethereum",
+    "type": "tokenlist",
+    "source": "https://wispy-bird-88a7.uniswap.workers.dev/?url=http://tokenlist.aave.eth.link",
+    "verified": false
+  },
+  {
+    "name": "polygon-default-tokenlist",
+    "network": "polygon",
+    "type": "tokenlist",
+    "source": "https://raw.githubusercontent.com/maticnetwork/polygon-token-list/master/src/tokens/default.json",
+    "verified": false
+  },
+  {
+    "name": "cmc-ethereum-stablecoin-tokenlist",
+    "network": "ethereum",
+    "type": "tokenlist",
+    "source": "https://wispy-bird-88a7.uniswap.workers.dev/?url=http://stablecoin.cmc.eth.link",
+    "verified": false
+  },
+  {
+    "name": "trustwallet-polygon",
+    "network": "polygon",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
+  },
+  {
+    "name": "trustwallet-ethereum",
+    "network": "ethereum",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
+  },
+  {
+    "name": "trustwallet-fantom",
+    "network": "fantom",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
+  },
+  {
+    "name": "trustwallet-arbitrum",
+    "network": "arbitrum",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
+  }
 ]
