adding trustwallet task for optimism

--- a/tasks.json
+++ b/tasks.json
@@ -47,5 +47,12 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-optimism",
+    "network": "optimism",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
