--- a/tasks.json
+++ b/tasks.json
@@ -54,5 +54,26 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-avalanchec",
+    "network": "avalanchec",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
+  },
+  {
+    "name": "trustwallet-celo",
+    "network": "celo",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
+  },
+  {
+    "name": "trustwallet-aurora",
+    "network": "aurora",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
