adding trustwallet task for classic

--- a/tasks.json
+++ b/tasks.json
@@ -75,5 +75,12 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-classic",
+    "network": "classic",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
