--- a/tasks.json
+++ b/tasks.json
@@ -89,5 +89,12 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-heco",
+    "network": "heco",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
