adding trustwallet task for oasis

--- a/tasks.json
+++ b/tasks.json
@@ -110,5 +110,12 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-oasis",
+    "network": "oasis",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
