--- a/tasks.json
+++ b/tasks.json
@@ -131,5 +131,12 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-smartchain",
+    "network": "smartchain",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
