adding trustwallet task for wanchain

--- a/tasks.json
+++ b/tasks.json
@@ -152,5 +152,12 @@
     "type": "trustwallet",
     "source": null,
     "verified": false
+  },
+  {
+    "name": "trustwallet-wanchain",
+    "network": "wanchain",
+    "type": "trustwallet",
+    "source": null,
+    "verified": false
   }
 ]
